# queryX

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
benchmark/: README.md  __init__.py  cases.json  generate_ground_truth.py  report.py  run.py
benchmark/results/: benchmark-deepseek-r1-8b-100k-20260723T103417Z.csv  benchmark-deepseek-r1-8b-100k-20260723T103417Z.json  benchmark-deepseek-r1-8b-100k-20260723T103417Z.report.en.md  benchmark-deepseek-r1-8b-100k-20260723T103417Z.report.it.md  (+39 more)
docker/: mongo-init.js  mysql-init.sql
docs/: api.md  architecture.md  configuration.md  ingestion.md
queryx/: __init__.py
scripts/: reproduce.sh  start-queryx.sh  stop-queryx.sh
tests/: README.md  test_acquisition.py  test_api_sources.py  test_asset_versioning.py  test_benchmark.py  test_benchmark_report.py  test_catalog_storage.py  test_duckdb_coordination.py  test_fingerprint_and_drift.py  test_ground_truth_reproducibility.py  test_health.py  test_ingestion_api.py  test_ingestion_fingerprint_validation.py  test_ingestion_readers.py  test_ingestion_storage.py  test_mongodb_inference.py  test_mongodb_query.py  test_mysql_query.py  test_natural_language_query.py  test_ollama_client.py  test_processing.py  test_processing_api.py  test_profiling_budget.py  test_provenance.py  test_query.py  test_scan_runs_and_current.py  test_scanner_unreachable.py  test_seed_demo.py  test_semantic_enrichment.py  test_storage_paths.py  test_ui.py  test_worker_api.py  test_worker_compose.py  test_worker_service.py  test_worker_storage.py
(+142 files in other folders)
